Fourth Commit. Mostly fixed some layout issues.

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
 * {
-	border-sizing: border-box;
-}
-
-body {
-	font-family: Arial;
+	box-sizing: border-box;
 }
 
 .container {
-	max-width: 80%;
+	max-width: 960px;
+	width: 70%;
+	margin: 0 auto;
+	font-family: Arial;
 }
+
+/* ---- Nav Bar Styling ---- */
 
 .nav {
 	background-color: #FFB4B0;
@@ -16,51 +17,97 @@ body {
 	height: 40px;
 	border: 2px solid black;
 	padding: 10px 10px 0 10px;
-	margin: 0 auto;
+	margin: 1em auto;
 }
 
 .nav > li {
 	list-style-type: none;
 	display: inline;
 	padding: 2px;
-	margin-top: 5px;
+	margin: 5px;
 }
 
-.nav + li {
-	border-right: 2px solid black;
+/* ---- Aside Styling ---- */
+
+aside {
+	display: inline-block;
+	float: left;
+	width: 25%;
+	height: 400px;
+	margin: 0 auto;
+	padding: 5px;
+	box-sizing: border-box;
+	background-color: #4DD7FA;
+	border: 2px solid black;
 }
 
 #filter-button {
-	font-size: 20px;
+	margin: 10% 0 10% 35%;
 	border: 2px solid black;
+	font-size: 20px;
 }
 
-aside {
-	background-color: #4DD7FA;
-	width: 25%;
-	height: 300px;
-	border: 2px solid black;
-	float: left;
-	margin: 5px 5px 0 5px;
-	padding: 5px;
+#artist, #album {
+	width: 80%;
+	padding: 3px;
+	box-sizing: border-box;
 }
+
+.check1 {
+	float: left;
+	padding-bottom: 2px;
+}
+
+.check2 {
+	float: right;
+	padding-bottom: 2px;
+}
+
+input, select {
+	padding: 2px;
+}
+
+/* ---- Main Content Styling ---- */
 
 div#main-content {
-	background-color: #FEFAC0;
-	width: 65%;
-	border: 2px solid black;
-	margin: 5px 5px 0 5px;
-	padding: 5px;
 	float: right;
+	display: inline-block;
+	width: 74%;
+	height: 400px;
+	margin: 0 auto;
+	padding: 5px;
+	box-sizing: border-box;
+	background-color: #FEFAC0;
+	border: 2px solid black;
 }
 
 section.favorite-songs ul > li {
-	list-style-type: none;
 	display: inline;
 	padding: 8px;
+	list-style-type: none;
 	font-size: 16px;
 }
 
 h3 {
 	padding-left: 10px;
+	color: #785616;
+}
+
+/* ---- Layout Styling ---- */
+
+div.box {
+	max-width: 960px;
+	width: 100%;
+}
+
+.box1 {
+	box-sizing: border-box;
+	width: 25%
+	float: left;
+}
+
+.box2 {
+	box-sizing: border-box;
+	width: 75%
+	float: left;
 }
